feat: чекбоксы и карточки

--- a/index.html
+++ b/index.html
@@ -28,12 +28,50 @@
             </div>
         </header>
         <main class="content">
-            <section class="info">
-
-                <!-- <form class="form">
-
-                    <input class="form__input" />
-                </form> -->
+            <section class="form">
+                <form class="form__container">
+                    <label class="form__label">
+                        Выбрать все
+                        <input type="checkbox" class="form__checkbox" />
+                    </label>
+                    <label class="form__label">
+                        Кошки
+                        <input type="checkbox" class="form__checkbox" />
+                    </label>
+                    <label class="form__label">
+                        Собаки
+                        <input type="checkbox" class="form__checkbox" />
+                    </label>
+                    <label class="form__label">
+                        Рыбы
+                        <input type="checkbox" class="form__checkbox" />
+                    </label>
+                    <label class="form__label">
+                        Другие питомцы
+                        <input type="checkbox" class="form__checkbox" />
+                    </label>
+                </form>
+            </section>
+            <section class="pets">
+                <ul class="pets__list">
+                    <li class="pets__item">
+                        <img class="pets__image" src="./images/cat-4541889_960_720.jpg" alt="">
+                        <p class="pets__description">Кошки</p>
+                    </li>
+                    <li class="pets__item">
+                        <img class="pets__image" src="./images/english-bulldog-562723_960_720.jpg" alt="">
+                        <p class="pets__description">Собаки</p>
+                    </li>
+                    <li class="pets__item">
+                        <img class="pets__image" src="./images/betta-4203428_960_720.jpg" alt="">
+                        <p class="pets__description">Рыбы</p>
+                    </li>
+                    <li class="pets__item">
+                        <img class="pets__image" src="./images/guinea-pig-4663147_960_720.jpg" alt="">
+                        <p class="pets__description">Другие питомцы</p>
+                    </li>
+                </ul>
+                
             </section>
         </main>
         <div class="navigation">
