feat: логика чекбоксов

--- a/index.html
+++ b/index.html
@@ -32,41 +32,41 @@
                 <form class="form__container">
                     <label class="form__label">
                         Выбрать все
-                        <input type="checkbox" class="form__checkbox" />
+                        <input type="checkbox" class="form__checkbox form__checkbox_all" checked/>
                     </label>
                     <label class="form__label">
                         Кошки
-                        <input type="checkbox" class="form__checkbox" />
+                        <input type="checkbox" class="form__checkbox form__checkbox_cat" checked/>
                     </label>
                     <label class="form__label">
                         Собаки
-                        <input type="checkbox" class="form__checkbox" />
+                        <input type="checkbox" class="form__checkbox form__checkbox_dog" checked/>
                     </label>
                     <label class="form__label">
                         Рыбы
-                        <input type="checkbox" class="form__checkbox" />
+                        <input type="checkbox" class="form__checkbox form__checkbox_fish" checked/>
                     </label>
                     <label class="form__label">
                         Другие питомцы
-                        <input type="checkbox" class="form__checkbox" />
+                        <input type="checkbox" class="form__checkbox form__checkbox_other" checked/>
                     </label>
                 </form>
             </section>
             <section class="pets">
                 <ul class="pets__list">
-                    <li class="pets__item">
+                    <li class="pets__item pets__item_cat">
                         <img class="pets__image" src="./images/cat-4541889_960_720.jpg" alt="">
                         <p class="pets__description">Кошки</p>
                     </li>
-                    <li class="pets__item">
+                    <li class="pets__item pets__item_dog">
                         <img class="pets__image" src="./images/english-bulldog-562723_960_720.jpg" alt="">
                         <p class="pets__description">Собаки</p>
                     </li>
-                    <li class="pets__item">
+                    <li class="pets__item pets__item_fish">
                         <img class="pets__image" src="./images/betta-4203428_960_720.jpg" alt="">
                         <p class="pets__description">Рыбы</p>
                     </li>
-                    <li class="pets__item">
+                    <li class="pets__item pets__item_other">
                         <img class="pets__image" src="./images/guinea-pig-4663147_960_720.jpg" alt="">
                         <p class="pets__description">Другие питомцы</p>
                     </li>
