feat: внешний вид чекбоксов

--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 <body>
     <div class="page">
         <header class="header">
-            <div class="header__block">
-                <a href="#" class="logo" alt="Логотип"></a>
-                <button class="header__button">Меню</button>
-            </div>
-            <h1 class="header__title">Интернет магазин товаров для животных</h1>
-            <div class="header__block">
-                <a href="#" class="header__info header__info_profile">
-                    <p class="header__subtitle"></p>
-                    <img src="./images/guest-256.ico" class="header__icon" alt="">
-                </a>
-                <a href="#" class="header__info header__info_basket">
-                    <p class="header__like-subtitle"></p>
-                    <img src="./images/cart-70-16.ico" class="header__icon" alt="">
-                </a>
+            <div class="header__wrapper">
+                <div class="header__block">
+                    <a href="#" class="logo" alt="Логотип"></a>
+                    <button class="header__button">Меню</button>
+                </div>
+                <h1 class="header__title">Интернет магазин товаров для животных</h1>
+                <div class="header__block">
+                    <a href="#" class="header__info header__info_profile">
+                        <p class="header__subtitle"></p>
+                        <img src="./images/guest-256.ico" class="header__icon" alt="">
+                    </a>
+                    <a href="#" class="header__info header__info_basket">
+                        <p class="header__like-subtitle"></p>
+                        <img src="./images/cart-70-16.ico" class="header__icon" alt="">
+                    </a>
+                </div>
             </div>
         </header>
         <main class="content">
@@ -32,23 +34,23 @@
                 <form class="form__container">
                     <label class="form__label">
                         Выбрать все
-                        <input type="checkbox" class="form__checkbox form__checkbox_all" checked/>
+                        <input type="checkbox" class="form__checkbox form__checkbox_all" checked />
                     </label>
                     <label class="form__label">
                         Кошки
-                        <input type="checkbox" class="form__checkbox form__checkbox_cat" checked/>
+                        <input type="checkbox" class="form__checkbox form__checkbox_cat" checked />
                     </label>
                     <label class="form__label">
                         Собаки
-                        <input type="checkbox" class="form__checkbox form__checkbox_dog" checked/>
+                        <input type="checkbox" class="form__checkbox form__checkbox_dog" checked />
                     </label>
                     <label class="form__label">
                         Рыбы
-                        <input type="checkbox" class="form__checkbox form__checkbox_fish" checked/>
+                        <input type="checkbox" class="form__checkbox form__checkbox_fish" checked />
                     </label>
                     <label class="form__label">
                         Другие питомцы
-                        <input type="checkbox" class="form__checkbox form__checkbox_other" checked/>
+                        <input type="checkbox" class="form__checkbox form__checkbox_other" checked />
                     </label>
                 </form>
             </section>
@@ -71,8 +73,10 @@
                         <p class="pets__description">Другие питомцы</p>
                     </li>
                 </ul>
-                
             </section>
+            <footer class="footer">
+                <p class="footer__copyright">&#169; 2021. Тестовое задание Лютовой Дарьи</p>
+            </footer>
         </main>
         <div class="navigation">
             <div class="navigation__container">
