feat: пути к файлам

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="pages/index.css">
     <title>Задание 1</title>
 </head>
 
@@ -20,11 +20,11 @@
                 <div class="header__block">
                     <a href="#" class="header__info header__info_profile">
                         <p class="header__subtitle"></p>
-                        <img src="./images/guest-256.ico" class="header__icon" alt="">
+                        <img src="images/guest-256.ico" class="header__icon" alt="">
                     </a>
                     <a href="#" class="header__info header__info_basket">
                         <p class="header__like-subtitle"></p>
-                        <img src="./images/cart-70-16.ico" class="header__icon" alt="">
+                        <img src="images/cart-70-16.ico" class="header__icon" alt="">
                     </a>
                 </div>
             </div>
@@ -57,19 +57,19 @@
             <section class="pets">
                 <ul class="pets__list">
                     <li class="pets__item pets__item_cat">
-                        <img class="pets__image" src="./images/cat-4541889_960_720.jpg" alt="">
+                        <img class="pets__image" src="images/cat-4541889_960_720.jpg" alt="">
                         <p class="pets__description">Кошки</p>
                     </li>
                     <li class="pets__item pets__item_dog">
-                        <img class="pets__image" src="./images/english-bulldog-562723_960_720.jpg" alt="">
+                        <img class="pets__image" src="images/english-bulldog-562723_960_720.jpg" alt="">
                         <p class="pets__description">Собаки</p>
                     </li>
                     <li class="pets__item pets__item_fish">
-                        <img class="pets__image" src="./images/betta-4203428_960_720.jpg" alt="">
+                        <img class="pets__image" src="images/betta-4203428_960_720.jpg" alt="">
                         <p class="pets__description">Рыбы</p>
                     </li>
                     <li class="pets__item pets__item_other">
-                        <img class="pets__image" src="./images/guinea-pig-4663147_960_720.jpg" alt="">
+                        <img class="pets__image" src="images/guinea-pig-4663147_960_720.jpg" alt="">
                         <p class="pets__description">Другие питомцы</p>
                     </li>
                 </ul>
@@ -90,7 +90,7 @@
             </div>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="pages/index.js"></script>
 </body>
 
 </html>
